Layout issues (Issue #642)

--- a/imixs-office-workflow-app/src/main/webapp/layout/css/office-theme.css
+++ b/imixs-office-workflow-app/src/main/webapp/layout/css/office-theme.css
@@ -1744,6 +1744,17 @@ input:disabled.imixs-date {
 	background: #EBEBE4;
 }
 
+/* Data View */
+.dataview .align-right {
+    text-align: right;
+}
+.dataview .align-center {
+    text-align: center;
+}
+.dataview td {
+	padding: 5px 10px !important;
+}
+
 /* Roles And Rights */
 .roles-and-rights th {
 	height: 140px;
